- Updated Arrays.asList with List.of