@@ -2,8 +2,8 @@ package org.hzt.utils.function.predicates;
 
 import org.hzt.utils.sequences.Sequence;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.function.Predicate;
 
 public final class CollectionPredicates {
@@ -21,7 +21,7 @@ public final class CollectionPredicates {
 
     @SafeVarargs
     public static <E> Predicate<Collection<E>> containsAll(E... values) {
-        return containsAll(Arrays.asList(values));
+        return containsAll(List.of(values));
     }
 
     public static <E> Predicate<Collection<E>> containsAny(Iterable<E> other) {
@@ -30,7 +30,7 @@ public final class CollectionPredicates {
 
     @SafeVarargs
     public static <E> Predicate<Collection<E>> containsAny(E... values) {
-        return containsAny(Arrays.asList(values));
+        return containsAny(List.of(values));
     }
 
     public static <E> Predicate<Collection<E>> containsNone(Iterable<E> other) {
@@ -39,6 +39,6 @@ public final class CollectionPredicates {
 
     @SafeVarargs
     public static <E> Predicate<Collection<E>> containsNone(E... values) {
-        return containsNone(Arrays.asList(values));
+        return containsNone(List.of(values));
     }
 }
